--- a/style.css
+++ b/style.css
@@ -909,6 +909,48 @@ body #book-index #indice .col-main {
     font-size: var(--MainText);
     line-height: var(--MainLineHeight);
   }
+
+  /*Ajustes generales slide*/
+  #actividad .class_slide {
+    padding-bottom: 2rem;
+    padding-left: var(--SlidePadding);
+    padding-right: var(--SlidePadding);
+  }
+
+  /*Titulo de la slide*/
+  #actividad .content .header {
+    padding: 1rem var(--SlidePadding);
+    margin-bottom: 2rem;
+    border-bottom: 0;
+    margin-left: calc(var(--SlidePadding) * -1);
+    background-color: var(--MainColor);
+  }
+
+  #actividad .content .header .chapter {
+    display: block;
+    background-color: var(--MainColorLight);
+    color: var(--MainColor);
+    text-align: center;
+    margin: 0 auto;
+    width: fit-content;
+    width: -moz-fit-content;
+  }
+  #actividad .content .header .title {
+    margin-bottom: 10px;
+    margin: 0;
+  }
+  #actividad .content .header .title img {
+    max-height: 30px;
+    margin-right: 15px;
+    display: none;
+  }
+  #actividad .content .header .title h3 {
+    font-size: calc(var(--MainText)*2);
+    color: #ffffff;
+    margin: 0;
+    font-weight: bold;
+  }
+
    /************************
    * CSS AÑADIDO POR HTML *
    ************************/
