--- a/style.css
+++ b/style.css
@@ -1281,6 +1281,9 @@ body #book-index #indice .col-main {
     width: 100%;
     margin: 2rem 0;
     background-color: transparent;
+    border: 2px solid var(--MainColor);
+    border-radius: 10px;
+    overflow: hidden;
   }
   #actividad .bck-dropdown .bck-dropdown-button {
     position: relative;
@@ -1320,6 +1323,19 @@ body #book-index #indice .col-main {
     padding: 1.5rem 1rem;
     margin-top: -0.5rem;
     background-color: #ffffff;
+  }
+
+  /*Desplegable 2*/
+  #actividad .bck-dropdown-2 .bck-dropdown-button {
+    background-color: transparent;
+    color: var(--MainColor);
+  }
+  /*Desplegable 3*/
+  #actividad .bck-dropdown-3.open .bck-dropdown-button {
+    box-shadow: 2px 6px 10px #00000052;
+  }
+  .bck-dropdown-3 .bck-dropdown-content {
+    background-color: var(--MainColorLight);
   }
 
 
