--- a/style.css
+++ b/style.css
@@ -1332,7 +1332,7 @@ body #book-index #indice .col-main {
   }
   /*Desplegable 3*/
   #actividad .bck-dropdown-3 {
-    border-radius: 0;
+    border: 0;
 }
   #actividad .bck-dropdown-3.open .bck-dropdown-button {
     box-shadow: 2px 6px 10px #00000052;
