--- a/style.css
+++ b/style.css
@@ -1404,12 +1404,13 @@ body #book-index #indice .col-main {
     font-size: inherit;
     margin-bottom: 2.0rem;
   }
-  #actividad div:not(.calculo) > table:not(.rf-tablegrid):not(.puzzle) td,
+  #actividad div:not(.calculo) > table:not(.rf-tablegrid):not(.puzzle)
   table.bck-table td,
    table.bck-table th,
     table.bck-table tr {
     border-width: 2px;
     border-color: var(--MainColor);
+    padding: 1rem;
   }
   table.bck-table-2 td,
    table.bck-table-2 th,
