--- a/style.css
+++ b/style.css
@@ -1546,7 +1546,11 @@ body #book-index #indice .col-main {
     transition: none;
     width: auto !important;
     height: auto !important;
+    min-height: 25px;
+    min-width: 25px;
     vertical-align: baseline;
+    border-radius: 7px;
+    padding: 0 0.5rem;
   }
   #actividad .player.audio:before {
     font-family: "FontAwesome";
@@ -1559,6 +1563,49 @@ body #book-index #indice .col-main {
     outline: 2px solid var(--MainColor);
     outline-offset: 0;
   }
+
+  /*--- Archivo adjunto ---*/
+  /*Quitamos la imagen que aparece por defecto*/
+  .bck-file-attach > img {
+    display: none;
+  }
+  .bck-file-attach span {
+    display: block;
+    max-width: 100%;
+    margin: 0;
+    padding: 0;
+    background: none;
+  }
+  #actividad .bck-file-attach {
+    font-size: .8em;
+    line-height: 1.1em;
+    padding: 1rem 1.5rem;
+    margin: 1.5rem 0;
+    display: flex;
+    align-items: center;
+    background-color: var(--MainColorLight);
+    position: relative;
+    width: fit-content;
+    width: -moz-fit-content;
+    text-decoration: none !important;
+    border-radius: 7px;
+    color: var(--MainColor);
+    transition: box-shadow 0.3s ease-in-out;
+    font-weight: bold;
+  }
+  #actividad .bck-file-attach:focus,
+   #actividad .bck-file-attach:hover,
+    #actividad .bck-file-attach:active  {
+    outline: 2px solid var(--MainColor);
+  }
+  #actividad .bck-file-attach:hover,
+   #actividad .bck-file-attach:active{
+   box-shadow: 4px 5px var(--MainColor);
+
+ }
+
+
+
 
 
 
